# suckless-os

./: .gitignore  LICENSE  Makefile  README.md  wiki-light.md
kernel/: .gitignore  Cargo.toml  Makefile  link.ld
kernel/src/: bootboot.rs  gdt.rs  lib.rs  main.rs  vmemory.rs
kernel/src/core/: mod.rs
kernel/src/light/: idt.rs  kdebug.rs  memory.rs  mod.rs  utils.rs
kernel/triplets/: sos-x86.json
