[package]
name = "sos"
version = "0.0.1"
authors = ["Michalis Mengisoglou <megisoglou56@gmail.com>"]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

# Abort on panic, instead of unwinding the stack. Unfortunately, at this level,
# we can't unwind a stack.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
rlibc = "1.0"
