[package]
name = "sos"
version = "0.0.1"
authors = ["Michalis Mengisoglou <megisoglou56@gmail.com>"]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

# Abort on panic, instead of unwinding the stack. Unfortunately, at this level,
# we can't unwind a stack.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
rlibc = "1.0"
uart_16550 = "0.2.12"
spin = "0.7.1"
raw-cpuid = "9.0.0"
x86_64 = "0.13.2"
